spade-tests/src/snapshots/spade_tests__ast_lowering__single_use_multiple_definition.snap
---
source: spade-tests/src/ast_lowering.rs
---
struct A {}
use A;


error: Multiple items with the same name
  ┌─ testinput:1:8
  │
1 │ struct A {}
  │        ^ A is defined multiple times
2 │ use A;
  │     - Previous definition here
